# huawei-poc

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  flake.nix
client/: Dockerfile.prod  next.config.mjs  package-lock.json  package.json  render.yml
client/src/app/: layout.js  page.js  page.module.css
client/src/app/camera/: page.js  page.jsx
client/src/app/dashboard/: page.css  page.js
client/src/app/history/: page.jsx  styles.module.css
client/src/app/home/: page.jsx
client/src/app/lib/: api.js
client/src/app/receiver/: page.js  styles.module.css
client/src/app/sender/: page.js  page.jsx
client/src/app/ui/dashboard/: Dashboard.js  MrtMenu.js
client/src/app/ui/layout/: pfooter.js  pheader.js
client/src/app/view/: page.jsx
clientv2/: package.json
clientv2/huawei-poc/src/components/: AppLayout.js  Dashboard.js
clientv2/src/: App.js
clientv2/src/components/: MrtMenu.js
clientv2/src/data/: mrtData.json
huawei-poc/: package-lock.json
huawei-poc/src/components/: AppLayout.js  Dashboard.js  MrtMenu.js
infra/: certificates.tf  client.tf  firewall.tf  main.tf  network.tf  proxy-http.tf  proxy.tf  server-startup.sh  server.tf  storage.tf
server/: Dockerfile  main.py  pyproject.toml  requirements.txt
server/models/: __init__.py  model.py
server/processor/: image_processor.py  processor.py
server/routes/: events.py  healthcheck.py  sockets.py
server/shapes/: events.py  messages.py  sender_message.py
server/utils/: falling.py  image.py  image_processor.py  logger.py  model.py  push.py  time.py  tracking.py
(+5 files in other folders)
